Removed some files from index.

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-In pl4ygr0und i will store some of my private projects. Till now there is only an alpha version of VERA (Virtual Enlighted Room Assistent) wich is an desktop and mobile WebApp. At this time its only possible to view the temperature in my room but in the near future I will add functions for controlling an RGB-LED stripe.<br>
+In pl4ygr0und i will store some of my private projects. Till now there is only an alpha version of VERA (Virtual Enlighted Room Assistent) wich is an desktop and mobile WebApp. At this time its only possible to view the temperature in my room but in the near future I will add functions for controlling an RGB-LED stripe.
 VERA runs on an RasberryPi.
