--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 In pl4ygr0und i will store some of my private projects. So far there is only an alpha version of VERA (Virtual Enlighted Room Assistent) wich is an desktop and mobile WebApp. At this time it's only possible to view the temperature in my room but in the near future I will add functions for controlling an RGB-LED stripe.
-VERA runs on an RasberryPi.
+VERA runs on an RasberryPi. Test.
